# data-comparison-demo

./: README.md
data_comparison_demo/: README.md  main.py  pyproject.toml  readme.md
data_comparison_demo/data/: deals_2024-02-26.csv  deals_2024-02-27.csv
data_comparison_demo/generate_data/: create_data.py
data_comparison_demo/reports/: deals_comparison_report.html
