[tool.poetry]
name = "data-comparison-demo"
version = "0.1.0"
description = ""
authors = ["nshizzle <88554064+n8dawhg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.0"
faker = "^23.3.0"
numpy = "^1.26.4"
datetime = "^5.4"
pyarrow = "^15.0.0"
datacompy = "^0.11.0"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
